# LocalTerra

./: .env  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  compose-api.yml  compose-elastic.yml  compose-fcd.yml  compose-pulsar.yml  compose-rpc.yml  compose-watcher.yml  docker-compose-reset  docker-compose.yml  entrypoint.sh  fcd.env  init.sql  local.env  mnemonics.json  nginx.conf  pyproject.toml  reset.sh  supervisord.conf
.github/workflows/: docker.yml  release.yml
config/: addrbook.json  app.toml  client.toml  config.toml  genesis.json  node_key.json  priv_validator_key.json  pubkey-replace.json  wasm.toml
contracts/bombay/: send_to_burn_address.wasm
contracts/columbus/: send_to_burn_address.wasm  send_to_burn_address.wasm.init.json
contracts/columbus-5/: send_to_burn_address.wasm
initdb.d/: init.sql
localterra-terracore/: Dockerfile  genesis.json  mnemonic.txt  reset.sh
localterra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
log/: deployed.3.json
pseudo-feeder/: Dockerfile  index.ts  package-lock.json  package.json  tsconfig.json
scripts/bombay/: package.json
scripts/columbus/: package.json
scripts/columbus-4/: package-lock.json  package.json
scripts/columbus-5/: package-lock.json  package.json
temp/: exported.json
terra/: genesis.json  genesis_gen_msgs.json  mnemonics.json  priv_validator_key.json
terra/config/: app.toml  config.toml  node_key.json
terra/data/: priv_validator_state.json
terracore/: Dockerfile  config.toml  init.sh  mnemonics.json
terracore/config/: config.toml  (+2 more)
tests/: test_localterra.py
(+6 files in other folders)
