[tool.poetry]
name = "localterra"
version = "0.1.0"
description = "A local Terra blockchain."
authors = ["William Chen <william@terra.money>"]

[tool.poetry.dependencies]
python = "^3.5"
docker = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
